Fix T72261 Overlay: Edit Mesh: Edges not visible when using "In front"

This was caused by additional depth pass not rendering in the correct
view.