source/blender/draw/engines/overlay/overlay_edit_mesh.c
@@ -407,7 +407,11 @@ void OVERLAY_edit_mesh_draw(OVERLAY_Data *vedata)
       GPU_framebuffer_clear_depth(fbl->overlay_default_fb, 1.0f);
     }
 
-    DRW_draw_pass(psl->edit_mesh_depth_ps[IN_FRONT]);
+    if (!DRW_pass_is_empty(psl->edit_mesh_depth_ps[IN_FRONT])) {
+      DRW_view_set_active(NULL);
+      DRW_draw_pass(psl->edit_mesh_depth_ps[IN_FRONT]);
+    }
+
     overlay_edit_mesh_draw_components(psl, pd, true);
   }
 }
